// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render() correct with initialState 1`] = `
<div
  className="root"
>
  <Slider
    defaultValue={
      Array [
        0,
        100,
      ]
    }
    marks={
      Object {
        "0": "0",
        "1000": "1000",
        "250": "250",
        "500": "500",
        "750": "750",
      }
    }
    max={1000}
    onAfterChange={[Function]}
    onChange={[Function]}
    prefixCls="ant-slider"
    range={true}
    step={50}
    tipFormatter={[Function]}
    tooltipPrefixCls="ant-tooltip"
    value={null}
  />
</div>
`;

exports[`render() correct with value is different from initial 1`] = `
<div
  className="root"
>
  <Slider
    defaultValue={
      Array [
        0,
        100,
      ]
    }
    marks={
      Object {
        "0": "0",
        "1000": "1000",
        "250": "250",
        "500": "500",
        "750": "750",
      }
    }
    max={1000}
    onAfterChange={[Function]}
    onChange={[Function]}
    prefixCls="ant-slider"
    range={true}
    step={50}
    tipFormatter={[Function]}
    tooltipPrefixCls="ant-tooltip"
    value={
      Array [
        50,
        100,
      ]
    }
  />
</div>
`;
